--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -59,6 +59,17 @@ main section.categories-show {
           opacity: 1.0;
         }
       }
+      aside.sold{
+        background:#F08080;
+         position: absolute; 
+         top: 0;
+         left:0; 
+         border-top-left-radius: 4px;
+         border-bottom-right-radius: 10px;
+         font-size: 1.5em; 
+         color:white;
+
+      }
 
     }
   }
