--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,3 +1,3 @@
 
-<div>Products :<%= @products %></div>
-<div>Categories:<%= @categories %></div>
+<div>Products :<%= @products %><a href="/admin/products">Products</a></div>
+<div>Categories :<%= @categories %></div>
