--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,3 +1,3 @@
 
-<div>Products :<%= @products %><a href="/admin/products">Products</a></div>
-<div>Categories :<%= @categories %></div>
+<div style="font-size:20px"><a href="/admin/products" style="font-size:20px">Products</a>: <%= @products %></div>
+<div style="font-size:20px">Categories: <%= @categories %></div>
