--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,3 +1,3 @@
 
-<div style="font-size:20px"><a href="/admin/products" style="font-size:20px">Products</a>: <%= @products %></div>
-<div style="font-size:20px"><a href="/admin/categories" style="font-size:20px">Categories</a> <%= @categories %></div>
+<div style="font-size:20px"><a href="/admin/products">Products</a>: <%= @products %></div>
+<div style="font-size:20px"><a href="/admin/categories">Categories</a> :<%= @categories %></div>
